@@ -92,6 +92,8 @@ where XXXXXX is the bug number as listed below.
 343306  OS X 10.10: UNKNOWN mach_msg unhandled MACH_SEND_TRAILER option
 343332  Unhandled instruction 0x9E310021 (fcvtmu) on aarch64
 343335  unhandled instruction 0x1E638400 (fccmp) aarch64
+343523  OS X mach_ports_register: UNKNOWN task message [id 3403, to 
+        mach_task_self(), reply 0x30f]
 343732  Unhandled syscall 144 (setgid) on aarch64
 343733  Unhandled syscall 187 (msgctl and related) on aarch64
 343802  s390x: Fix false positives "conditional jump or move depends on
